Processing files blk00001.dat - blk00200.dat; resulting parquet files contain ~55M nodes and ~40G edges and the convert process took 90 minutes.