@@ -5,11 +5,13 @@ INPUT_DIR="$HOME/bitcoin/input"
 OUTPUT_DIR="$HOME/bitcoin/output"
 
 mkdir -p $INPUT_DIR
+mkdir -p $HOME/tmp
 rm -rf $INPUT_DIR/*
 
 # following command assumes the default bitcoin client to be installed and present in the home directory
 # copy the first 3 block files
-cp $HOME/.bitcoin/blocks/blk0000{1..5}.dat $INPUT_DIR
+cp $HOME/.bitcoin/blocks/blk00{0,1}{0..9}{0..9}.dat $INPUT_DIR
+cp $HOME/.bitcoin/blocks/blk00200.dat $INPUT_DIR
 
 #cp $HOME/.bitcoin/blocks/blk00003.dat $INPUT_DIR
 
@@ -19,8 +21,10 @@ hadoop fs -rm -R -f $OUTPUT_DIR
 sbt clean assembly
 
 spark-submit \
-  --driver-memory 2G \
-  --executor-memory 2G \
+  --driver-memory 9G \
+  --executor-memory 1.25G \
   --class io.radanalytics.bitcoin.ParquetConverter \
-  --master local[8] \
+  --master local[4] \
+  --conf "spark.executor.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" \
+  --conf "spark.local.dir=$HOME/tmp" \
   ./target/scala-2.11/bitcoin-insights.jar $INPUT_DIR $OUTPUT_DIR $@
